fix: fixing incorrect alignment of actions on User Profile view
Ignore All Messages... link now properly aligned with other actions

--- a/modules/ept-frontend/client/scss/ept/views/public/_profile.scss
+++ b/modules/ept-frontend/client/scss/ept/views/public/_profile.scss
@@ -554,7 +554,7 @@ profile {
       text-align: center;
     }
   }
-  .profile-row.profile-action { text-align: center; }
+  // .profile-row.profile-action { text-align: center; }
   .mobile-post-time { color: $secondary-font-color; padding-bottom: 1rem; }
   .mobile-post { padding: 1rem; }
   .mobile-post:nth-child(even) { background: $sub-header-color; }
